# setuptools-scm-experiment

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mypackage/: __init__.py  mymodule.py
src/pyscm/: __init__.py  scm.py
