[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
description = "Experiment with how to use setuptools-scm for dynamic versioning."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ollie Bell", email="ollie.b@transitionzero.org"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests" 
]
dynamic = ["version"]

[tool.setuptools_scm]
